load("@py_deps//:requirements.bzl", "requirement")

py_test(
    name = "bootstrap_test",
    srcs = [
        "bootstrap.py",
        "bootstrap_test.py",
    ],
    data = [
        "//jobs",
        "//config/prow:config.yaml",
    ] + glob(["fake/**"]),
    python_version = "PY2",
    tags = ["local"],  # TODO(fejta): https://github.com/kubernetes/test-infra/issues/12195
    deps = [
        requirement("PyYAML"),
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
