[project]
name = "kettle"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-pubsub>=2.37.0",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=9.0.3",
]
