load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "anywhere.go",
        "bash.go",
        "build.go",
        "dump.go",
        "e2e.go",
        "extract_federation.go",
        "extract_k8s.go",
        "federation.go",
        "gke.go",
        "kops.go",
        "kubernetes.go",
        "local.go",
        "main.go",
        "node.go",
        "none.go",
        "stage.go",
        "util.go",
    ],
    importpath = "k8s.io/test-infra/kubetest",
    visibility = ["//visibility:private"],
    deps = [
        "//boskos/client:go_default_library",
        "//kubetest/conformance:go_default_library",
        "//kubetest/dind:go_default_library",
        "//kubetest/e2e:go_default_library",
        "//kubetest/process:go_default_library",
        "//kubetest/util:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//vendor/github.com/docker/docker/api/types:go_default_library",
        "//vendor/github.com/docker/docker/client:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
    ],
)

go_binary(
    name = "kubetest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "anywhere_test.go",
        "dump_test.go",
        "extract_test.go",
        "kubernetes_test.go",
        "main_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//kubetest/util:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//kubetest/conformance:all-srcs",
        "//kubetest/dind:all-srcs",
        "//kubetest/e2e:all-srcs",
        "//kubetest/process:all-srcs",
        "//kubetest/util:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
