load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aks.go",
        "aksengine.go",
        "aksengine_helpers.go",
        "bash.go",
        "build.go",
        "dump.go",
        "e2e.go",
        "extract_k8s.go",
        "gke.go",
        "kops.go",
        "kubernetes.go",
        "local.go",
        "main.go",
        "node.go",
        "none.go",
        "stage.go",
        "util.go",
    ],
    importpath = "k8s.io/test-infra/kubetest",
    visibility = ["//visibility:private"],
    deps = [
        "//kubetest/conformance:go_default_library",
        "//kubetest/e2e:go_default_library",
        "//kubetest/kind:go_default_library",
        "//kubetest/process:go_default_library",
        "//kubetest/util:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/authorization/mgmt/2015-07-01/authorization:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/containerservice/mgmt/2019-10-01/containerservice:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/preview/msi/mgmt/2015-08-31-preview/msi:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/resources/mgmt/2018-05-01/resources:go_default_library",
        "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
        "@com_github_azure_go_autorest_autorest//:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
        "@com_github_azure_go_autorest_autorest_adal//:go_default_library",
        "@com_github_pelletier_go_toml//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_k8s_sigs_boskos//client:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
    ],
)

go_binary(
    name = "kubetest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aksengine_test.go",
        "dump_test.go",
        "extract_test.go",
        "gke_test.go",
        "kubernetes_test.go",
        "main_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//kubetest/util:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//kubetest/conformance:all-srcs",
        "//kubetest/e2e:all-srcs",
        "//kubetest/kind:all-srcs",
        "//kubetest/process:all-srcs",
        "//kubetest/util:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
