load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/kubetest2",
    visibility = ["//visibility:private"],
    deps = ["//kubetest2/pkg/app/shim:go_default_library"],
)

go_binary(
    name = "kubetest2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//kubetest2/kubetest2-eks:all-srcs",
        "//kubetest2/kubetest2-gce:all-srcs",
        "//kubetest2/kubetest2-gke:all-srcs",
        "//kubetest2/kubetest2-kind:all-srcs",
        "//kubetest2/pkg/app:all-srcs",
        "//kubetest2/pkg/build:all-srcs",
        "//kubetest2/pkg/exec:all-srcs",
        "//kubetest2/pkg/metadata:all-srcs",
        "//kubetest2/pkg/process:all-srcs",
        "//kubetest2/pkg/types:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
