# Usage:
#   bazel run //label_sync -- --help # run image locally
#   bazel run //label_sync:image  # build image
#   bazel run //label_sync:push  # push image (after building)

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//prow:def.bzl", "prow_image", "prow_push")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

NAME = "label_sync"

prow_image(
    name = "image",
    base = "@alpine-base//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

prow_push(
    name = "push",
    images = {
        "{STABLE_DOCKER_REPO}/label_sync:{DOCKER_TAG}": ":image",
        "{STABLE_DOCKER_REPO}/label_sync:latest": ":image",
        "{STABLE_DOCKER_REPO}/label_sync:latest-{BUILD_USER}": ":image",
    },
)

go_binary(
    name = NAME,
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/label_sync",
    deps = [
        "//prow/config/secret:go_default_library",
        "//prow/flagutil:go_default_library",
        "//prow/github:go_default_library",
        "//prow/logrusutil:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    data = [
        "//label_sync:test_examples",
    ],
    embed = [":go_default_library"],
)

filegroup(
    name = "test_examples",
    srcs = glob(["*.yaml"]),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)
