package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)

go_binary(
    name = "linkcheck",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["links.go"],
    importpath = "k8s.io/test-infra/linkcheck",
    deps = [
        "@cc_mvdan_xurls_v2//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)
