load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/mergecred",
    visibility = ["//visibility:private"],
    deps = ["//mergecred/cmd/mergecred:go_default_library"],
)

go_binary(
    name = "mergecred",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
